# datarails-open

./: README.md  pyproject.toml
app/: __init__.py  ai.py  database.py  excel_loader.py  insights_repository.py  loader.py  main.py  office_bridge.py  reporting.py  scenario.py  settings.py
data/: actuals.csv  budget.csv
excel_addin/: package.json
excel_addin/taskpane/: index.html  styles.css  taskpane.js
excel_vba/: README.md
excel_vba/customUI/: customUI14.xml
excel_vba/src/Forms/: frmSettings.frm
excel_vba/src/Modules/: AIInsights.bas  API_Client.bas  Config.bas  DataLoader.bas  ReportLoader.bas  RibbonCallbacks.bas  ScenarioExporter.bas  Settings.bas  Utils.bas
legacy_web_ui/: manifest.xml
legacy_web_ui/taskpane/: commands.html  taskpane.js
tests/: conftest.py  test_ai.py  test_excel_loader.py  test_loader.py  test_office_bridge.py  test_reporting.py  test_scenario.py
