[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datarails-open"
version = "0.1.0"
description = "Open-source MVP inspired by Datarails for FP&A automation"
authors = [{name = "Open Source"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
datarails-open = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
